--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,8 @@
     <dimen name="drawer_list_item_text_margin">72dp</dimen>
     <dimen name="drawer_list_item_text_size">16sp</dimen>
 
+    <dimen name="contact_list_item_height">72dp</dimen>
+    <dimen name="contact_list_title_text_size">17sp</dimen>
+    <dimen name="contact_list_subtitle_text_size">11sp</dimen>
+
 </resources>
