--- a/app/src/main/res/layout/default_list.xml
+++ b/app/src/main/res/layout/default_list.xml
@@ -12,6 +12,7 @@
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:clipToPadding="false"
             android:smoothScrollbar="true"
             android:paddingRight="@dimen/horizontal_margin"
             android:paddingLeft="@dimen/horizontal_margin"
