--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -46,9 +46,12 @@
                     android:divider="@android:color/transparent"
                     android:dividerHeight="0dp" />
 
-                <include
-                    android:id="@+id/drawer_footer"
-                    layout="@layout/drawer_footer" />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/drawer_menu"
+                    android:layout_width="match_parent"
+                    android:layout_height="144dp"
+                    android:background="@color/drawer_footer"
+                    android:overScrollMode="never" />
             </LinearLayout>
         </android.support.v4.widget.DrawerLayout>
     </LinearLayout>
